# remote-commit

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
daemon/: Cargo.toml
daemon/src/: main.rs  protocol.rs
git-actor/: Cargo.toml
git-actor/src/: lib.rs
mobile-core/: Cargo.toml  build.rs
mobile-core/bindings/uniffi/mobile_core/: mobile_core.kt
mobile-core/src/: build.rs  lib.rs  mobile_core.udI  mobile_core.udl  protocol.rs
test-harness/: Cargo.toml
test-harness/src/: main.rs
