[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies] 
mobile-core = { path = "../mobile-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
pico-args = "0.5" 

anyhow = "1.0"
libp2p = { version = "0.51", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "macros",
    "dns",        
     "serde",   # Required for tokio_development_transport
] }
futures = "0.3"