[package]
name = "mobile-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib", "rlib"]



[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 
thiserror = "2.0.12"
libp2p = { version = "0.51", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "macros", 
     "serde",
] }
futures = "0.3"

# Updated UniFFI version with better async support
uniffi = { version = "0.29.3", features = ["tokio"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }