[package]
name = "mobile-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
# Add "cdylib" to this list
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 
thiserror = "2.0.12"
libp2p = { version = "0.51", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "macros", 
    "serde",
    "kad",
    "relay",
    "identify",
] }
futures = "0.3"

# Correct UniFFI dependency with both features
uniffi = { version = "0.29.3", features = ["tokio", "bindgen"] } 

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] } 